Revised slides completely

--- a/css/custom.css
+++ b/css/custom.css
@@ -16,6 +16,10 @@ i {
   margin-bottom: 0;
 }
 
-.reveal .creativecommons span {
+.reveal .smaller {
   font-size: 0.4em;
+}
+
+.reveal .wide {
+  font-size: 0.75em;
 }
